--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^20.14.2",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "express": "^4.19.2",
     "fs-extra": "^11.2.0",
     "typescript": "^5.4.5"
   }
