--- a/src/package.json
+++ b/src/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/date-fns": "^2.6.0",
+    "@types/express": "^4.17.21",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.14.2",
     "axios": "^1.7.2",
