--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^20.14.8",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fs-extra": "^11.2.0",
     "typescript": "^5.4.5"
