--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.3.1",
     "fs-extra": "^11.2.0",
     "typescript": "^5.4.5"
   }
